unit tests failing under glib 2.74 (g_log_set_writer_func() called multiple times)
From !1145 (comment 1556137):
Indeed the test runs with glib 2.74.0-1, the last successful pipeline did run 2.72.3-1+b1.
Failure starts here
Bail out! GLib-FATAL-ERROR: g_log_set_writer_func() called multiple times
stderr:
(phoc:11105): phoc-wlroots-CRITICAL **: 15:43:59.204: [render/wlr_renderer.c:352] Failed to find any DRM render node
phoc-output-Message: 15:43:59.227: Output 'HEADLESS-1' added ('headless'/'headless'/''), 0mm x 0mm
phosh-polkit-auth-agent-Message: 15:43:59.385: PolKit failed to properly get our session: No session for pid 11103
phosh-shell-Message: 15:43:59.387: Failed to connect to sensor-proxy: Could not connect: No such file or directory
phosh-rotation-manager-Message: 15:43:59.394: Got no sensor-proxy, no automatic rotation
(/builds/airtower-luna/phosh/_build/tests/test-shell:11103): phosh-background-WARNING **: 15:43:59.482: Unable to open file:///usr/share/backgrounds/gnome/adwaita-l.jpg: Error opening file /usr/share/backgrounds/gnome/adwaita-l.jpg: No such file or directory
phosh-calls-manager-Message: 15:43:59.493: Failed to get calls object manager client: Operation was cancelled
phosh-wwan-mm-Message: 15:43:59.493: Failed to connect modem manager: Operation was cancelled
phosh-wifimanager-Message: 15:43:59.493: Failed to init NM: Operation was cancelled
phosh-vpn-manager-Message: 15:43:59.493: Failed to init NM: Operation was cancelled
(phoc:11149): phoc-wlroots-CRITICAL **: 15:43:59.518: [render/wlr_renderer.c:352] Failed to find any DRM render node
phoc-output-Message: 15:43:59.540: Output 'HEADLESS-2' added ('headless'/'headless'/''), 0mm x 0mm
phoc-output-Message: 15:43:59.540: Output 'HEADLESS-2' has invalid physical size, using default scale
phoc-output-Message: 15:43:59.540: Output 'HEADLESS-1' added ('headless'/'headless'/''), 0mm x 0mm
(/builds/airtower-luna/phosh/_build/tests/test-shell:11103): GLib-ERROR **: 15:43:59.697: g_log_set_writer_func() called multiple times
――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――
There are some more errors which I've not had a closer look at yet, but seems it's about #840 (closed)
Edited by Evangelos Ribeiro Tzaras