log: Guard against setting g_log_set_writer_func() multiple times

While it was always invalid it is enforced as of glib 2.74.

This fixes tests failing like:

GLib-ERROR **: 08:25:34.271: g_log_set_writer_func() called multiple times

Closes: https://gitlab.gnome.org/World/Phosh/phosh/-/issues/841
Part-of: <https://gitlab.gnome.org/World/Phosh/phosh/-/merge_requests/1148>